--- a/versions.properties
+++ b/versions.properties
@@ -7,6 +7,7 @@
 #### suppress inspection "SpellCheckingInspection" for whole file
 #### suppress inspection "UnusedProperty" for whole file
 
+## unused
 plugin.net.nemerosa.versioning=3.0.0
 
 ## unused
@@ -14,13 +15,18 @@ plugin.android=8.0.1
 
 ## unused
 
+## unused
 version.androidx.core=1.12.0-rc01
 
+## unused
 version.androidx.test.espresso=3.6.0-alpha01
 
+## unused
 version.androidx.test.ext.junit=1.2.0-alpha01
 
+## unused
 version.kotlin=1.9.0
 ## # available=1.9.10
 
+## unused
 version.junit.junit=4.13.2
