--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,7 +2,7 @@
 
 [plugins]
 
-org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version = "1.9.0" }
 com-android-library = { id = "com.android.library", version = "8.0.1" }
 net-nemerosa-versioning = { id = "net.nemerosa.versioning", version = "3.0.0" }
 
@@ -11,3 +11,23 @@ gradle = { id = "gradle", version = "8.0.1" }
 [versions]
 
 kotlin = "1.9.0"
+
+androidx-test-ext-junit = "1.2.0-alpha01"
+
+androidx-test-espresso = "3.6.0-alpha01"
+
+androidx-core = "1.12.0-rc01"
+
+junit-junit = "4.13.2"
+
+[libraries]
+
+com-android-tools-build-gradle = "com.android.tools.build:gradle:8.0.2"
+
+androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
+
+espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "androidx-test-espresso" }
+
+core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "androidx-core" }
+
+junit-junit = { group = "junit", name = "junit", version.ref = "junit-junit" }
